--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Neel Smith
-tagline:          'Neel Smith on github'
-description:      'Overview of some of my work on github.'
+title:            Neel Smith on github
+tagline:          'Openly available work'
+description:      'A selection of my openly available work on github.'
 baseurl: http://neelsmith.github.io
 
 
