--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,16 @@ author:
 paginate:         5
 
 
-version:          0.12.0
 
 links:
+  - title: Classics
+    url: /classics
+  - title: Manuscripts
+    url: /mss
+  - title: Citation
+    url: /citation
+  - title: Writing digitally
+    url: /writing
   - title: Github source repository
     url: https://github.com/neelsmith/neelsmith.github.io
     external: true
