--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 
 # Setup
 title:            Neel Smith on github
-tagline:          'Openly available work'
-description:      'A selection of my openly available work on github.'
+tagline:          'Openly available work in digital classics'
+description:      'Some highlights of my openly available work on github'
 baseurl: http://neelsmith.github.io
 
 
