--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ paginate:         5
 
 
 links:
+  - title: Tagged blog posts
+    url: /alltags
   - title: Greek
     url: /greek
   - title: Manuscripts
