--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@
 markdown:         redcarpet
 pygments:         true
 
+redcarpet:
+    extensions: ["tables"]
+
 # Permalinks
 permalink:        pretty
 
@@ -15,7 +18,7 @@ baseurl: ""
 
 author:
   name:           'Neel Smith'
- 
+
 
 paginate:         5
 
@@ -38,4 +41,3 @@ links:
   - title: Github source repository
     url: https://github.com/neelsmith/neelsmith.github.io
     external: true
-   
