--- a/_data/blogtopics.yaml
+++ b/_data/blogtopics.yaml
@@ -12,6 +12,8 @@ dh:
   title: Digital Humanities
 greeklang:
   title: The greeklang system
+groovy:
+  title: The groovy programming language  
 hcmid:
   title: The Holy Cross MID Club
 hmt:
@@ -36,3 +38,5 @@ smyth:
   title: Smyth's Greek Grammar
 spark:
   title: Apache Spark
+xml:
+  title: XML
