--- a/_data/blogtopics.yaml
+++ b/_data/blogtopics.yaml
@@ -13,7 +13,7 @@ dh:
 greeklang:
   title: The greeklang system
 groovy:
-  title: The groovy programming language  
+  title: The groovy programming language
 hcmid:
   title: The Holy Cross MID Club
 hmt:
@@ -38,5 +38,7 @@ smyth:
   title: Smyth's Greek Grammar
 spark:
   title: Apache Spark
+wrong:
+  title: '"Everything you know is wrong"'
 xml:
   title: XML
