--- a/_data/blogtopics.yaml
+++ b/_data/blogtopics.yaml
@@ -20,6 +20,8 @@ hcmid:
   title: The Holy Cross MID Club
 hmt:
   title: The Homer Multitext project
+linux:
+  title: Linux
 listutils:
   title: The listutils code library
 morphology:
