--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 # Dependencies
 markdown:         kramdown
-pygments:         true
-
 redcarpet:
-    extensions: ["tables"]
+ extensions: ["fenced_code_blocks", "autolink", "tables"]
+
+highlighter: rouge
+
+
 
 # Permalinks
 permalink:        pretty
